--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
     >
 
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/questionText"
+
         />
 <LinearLayout
     android:layout_width="wrap_content"
@@ -30,5 +31,9 @@
         android:text="@string/falseButton"
         />
     </LinearLayout>
-
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button"/>
 </LinearLayout>
